Fix widget dropdown menu z-index

--- a/cosinnus/static/less/v2/dashboard.less
+++ b/cosinnus/static/less/v2/dashboard.less
@@ -586,6 +586,7 @@
 		position: absolute;
 		right: 16px;
 		margin-top: 10px;
+		z-index: 5;
 		
 		.dropdown-toggle {
 			font-size: 18px;
